assets/css/style.css
/* Global Styles */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100lvh;
  width: 100%;
}

/* Font Imports */

@font-face {
  font-family: "Showtime";
  src: url(../fonts/showtime-font/Showtime-R9Ke.ttf);
}

@font-face {
  font-family: "Walt";
  src: url(../fonts/waltograph/waltograph42.ttf);
}

@font-face {
  font-family: "InterTight";
  src: url(../fonts/Inter_Tight/InterTight-VariableFont_wght.ttf);
}

/* Typography */

.headLine {
  font-family: "Showtime";
  color: beige;
  font-size: 3rem;
  z-index: 1;
}

span {
  font-family: "InterTight";
  font-weight: 600;
}

.subTitle {
  font-family: "Walt";
  color: beige;
  font-size: 1.5rem;
  letter-spacing: 0.1rem;
  z-index: 1;
}

.cardContentHeadline {
  margin-bottom: 1.3rem;
  border: 1px gray solid;
  padding: 1rem;
  border-radius: 2rem;
}

/* Header */

header {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: rgb(3, 3, 3);
  border-bottom-left-radius: 4rem;
  border-bottom-right-radius: 4rem;
  padding: 0.7rem;
}

/* Main */

main {
  display: flex;
  padding: 1rem;
  gap: 1rem;
  flex-wrap: nowrap;
}

/* Section MovieDB */

.movieCard {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  gap: 0.3rem;
  list-style: none;
  background-color: beige;
  text-align: center;
  border-radius: 2rem;
  padding: 1rem;
  color: black;
  width: 100%;
  height: auto;
  font-family: "InterTight";
}

.movieDbSearch {
  display: flex;
  flex-direction: column;
  background-color: rgba(0, 0, 0, 0.6);
  border-radius: 1rem;
  color: white;
  z-index: 1;
  font-family: "InterTight";
  font-weight: 200;
  padding: 1rem;
  align-items: center;
  justify-content: flex-start;
  width: fit-content;
  gap: 1rem;
  text-align: center;
}

.movieDbOutput {
  display: flex;
  background-color: rgba(0, 0, 0, 0.6);
  border-radius: 1rem;
  color: white;
  z-index: 1;
  font-family: "InterTight";
  font-weight: 200;
  padding: 1rem;
  align-items: center;
  justify-content: center;
  width: 100%;
}

#filterFunktion {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 1rem;
  text-align: center;
}

input[type="text"],
textarea {
  background-color: beige;
  border-radius: 0.3rem;
  border-style: none;
  padding: 0.3rem;
  text-align: center;
}

input[type="button"] {
  background-color: beige;
  color: rgb(20, 20, 20);
  border-radius: 0.3rem;
  border-style: none;
  padding: 0.4rem;
  text-align: center;
  font-size: 1rem;
  font-family: "InterTight";
  font-weight: 200;
  cursor: pointer;
}

#sortierFunktion {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.addMovieButton {
  background-color: beige;
  border-radius: 0.3rem;
  border-style: none;
  padding: 0.3rem;
  text-align: center;
  width: 100%;
  font-size: 1rem;
  font-family: "InterTight";
  font-weight: 200;
  color: rgb(36, 36, 36);
  font-family: "InterTight";
  cursor: pointer;
}

#filterFunktion label {
  font-family: "Walt";
  letter-spacing: 0.1rem;
  font-size: 2rem;
  border-bottom: 1px beige solid;
}

#sortierFunktion label {
  font-family: "Walt";
  letter-spacing: 0.1rem;
  font-size: 2rem;
  border-bottom: 1px beige solid;
}

#contributeLabel {
  font-family: "Walt";
  letter-spacing: 0.1rem;
  font-size: 2rem;
  border-bottom: 1px beige solid;
}

::placeholder {
  font-family: "InterTight";
  font-weight: 200;
}

#movieList {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  font-size: 0.9rem;
  justify-items: center;
  gap: 1rem;
}

.sortButtonsFrame {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

/* Footer */

footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: rgb(3, 3, 3);
  border-top-left-radius: 1.5rem;
  border-top-right-radius: 1.5rem;
  padding: 0.7rem;
}

.logoFooter {
  color: beige;
  font-family: "Showtime";
  z-index: 1;
}

/* Background Image Responsive */

#backgroundContainer {
  background-image: url(../img/curtain_cropped.jpg);
  height: 100lvh;
  width: 100%;
  background-size: cover;
  background-position: center center;
  position: fixed;
  top: 0;
  z-index: -1;
}

/* Film Grain Overlay */

.filmGrainOverlay {
  position: absolute;
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
  z-index: 1;
}
.filmGrainFrame {
  display: flex;
  position: fixed;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  background-position: center;
}

.filmGrainFrame:after {
  content: "";
  background-image: url("https://upload.wikimedia.org/wikipedia/commons/7/76/1k_Dissolve_Noise_Texture.png");
  height: 300%;
  width: 300%;
  position: fixed;
  opacity: 0.1;
  animation: animateGrain 8s steps(10) infinite;
}

@keyframes animateGrain {
  0%,
  100% {
    transform: translate(0, 0);
  }
  10% {
    transform: translate(-5%, -10%);
  }
  20% {
    transform: translate(-15%, -20%);
  }
  30% {
    transform: translate(-5%, -10%);
  }
  40% {
    transform: translate(-15%, -20%);
  }

  50% {
    transform: translate(-5%, -10%);
  }
  60% {
    transform: translate(-15%, -20%);
  }
  70% {
    transform: translate(-5%, -10%);
  }
  80% {
    transform: translate(-15%, -20%);
  }
  90% {
    transform: translate(-5%, -10%);
  }
  100% {
    transform: translate(-15%, -20%);
  }
}

/* Modal für Add Movie */

#addMovieContainer {
  display: none;
  background-color: #fff;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin-top: 20px;
}

#extendArrow {
  cursor: pointer;
  font-size: 24px;
  margin-bottom: 10px;
  user-select: none;
}

#addMovieModal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.4);
  padding-top: 60px;
}

#modalContent {
  background-color: #fefefe;
  margin: 5% auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
  border-radius: 8px;
}

#closeModal {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

#closeModal:hover,
#closeModal:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

